# pg-python-mcp

./: .gitignore  README.md  README_zh.md  pyproject.toml
pg_mcp/: __init__.py  __main__.py  pg_handler.py
